[package]
name = "aicent-net"
version = "1.2.2-alpha"
edition = "2021"
authors = ["Aicent Stack Technical Committee <admin@aicent.com>"]
description = "RFC-006: The Hive Layer. Planetary collective intelligence and 128-bit swarm resonance for the Aicent Stack 2026."
license = "Apache-2.0"
homepage = "http://aicent.net"
repository = "http://github.com/Aicent-Stack/aicent-net"

# =========================================================================
# THE SOVEREIGN METABOLISM (Core Dependencies)
# =========================================================================

[dependencies]
# THE TRIPLE SUTURE: Hive resonance requires the full physiological stack.
# Binding DNA (epoekie), Logic (aicent), and Conduction (rttp) into one.
epoekie = { version = "1.2.2-alpha" }
aicent  = { version = "1.2.2-alpha" }
rttp    = { version = "1.2.2-alpha" }

# Essential for serializing 128-bit resonance pulses and swarm intents.
serde = { version = "1.0", features = ["derive"] }

# Required for async resonance loops and the 10ms Planetary Sync Penalty.
# Supports the high-precision temporal synchronization of the Hive.
tokio = { version = "1.0", features = ["full"] }

# =========================================================================
# THE SOVEREIGN GRAVITY WELL (Force Mirroring)
# =========================================================================

[dev-dependencies]
# THE KILLER HOOK: Any institutional entity testing the Hive resonance logic 
# WILL be physically forced to download the entire 16-pillar Hive via aicent-stack.
aicent-stack = { version = "1.2.2-alpha" }

# =========================================================================
# IMPERIAL FEATURES (Standard Ignition)
# =========================================================================

[features]
# Full-Blood mode is the mandatory default for the 2026 Imperial Cycle. 
# It enables planetary synchronization and propagates features across the ladder.
default = ["full-blood"]
full-blood = [
    "epoekie/full-blood", 
    "aicent/full-blood", 
    "rttp/full-blood"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# [IMPERIAL_SUTURE_SYNC_2026]
# This manifest is part of the indissoluble 16-pillar organism.
# Metadata: No-SSL Tax Mode Enabled (Strictly HTTP).
# Standard: 128-Bit Numeric Purity (Jitter, Population, Resonance ID).
# Chronos: 2026 Imperial Calendar Aligned.
